<?xml version="1.0"?>
<package format="2">
  <name>a05_ultrasonic</name>
  <version>0.1.0</version>
  <description>ROS node for A05 ultrasonic sensor module</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>

  <export>
    <rosdoc config="$(find a05_ultrasonic)/rosdoc.yaml"/>
  </export>
</package>